--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./lib/index.js",
   "scripts": {
     "storybook": "start-storybook -p 9000",
+    "lint": "eslint ./src/index.js",
     "build": "babel src/index.js -o ./lib/index.js",
-    "prepublish": "npm run build"
+    "prepublish": "npm run lint && npm run build"
   },
   "author": "makotot",
   "license": "MIT",
@@ -17,11 +18,16 @@
     "@storybook/react": "^3.4.8",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "html-webpack-plugin": "^3.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
