--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,8 @@ tags
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -77,4 +78,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-
+lib/*.js
