--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "scripts": {
     "storybook": "start-storybook -p 9000",
     "lint": "eslint ./src/index.js",
+    "test": "jest",
     "build": "babel src/index.js -o ./lib/index.js",
-    "prepublish": "npm run lint && npm run build"
+    "prepublish": "npm run lint && npm run test && npm run build"
+  },
+  "jest": {
+    "setupFiles": [
+      "./setupTests.js"
+    ]
   },
   "author": "makotot",
   "license": "MIT",
@@ -23,14 +29,18 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
+    "jest": "^23.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-test-renderer": "^16.4.1"
   },
   "peerDependencies": {
     "prop-types": ">=15",
